EBEGU-1465 - Unterstuetuzungsbestaetigung wird gebraucht wenn der GS Sozialhilfe bekommt. Dies muss in den Dokumenten fuer die Familiensituation berechnet werden, da es Daten aus der Familiensituation benoetigt, allerdings wird dem Bereich Finanzielle Situation hinzugefuegt. - Viele kleine Refactorings wegen equals und Integer